* 2007-10-18 - martin.kauss@open-xchange.com

 - Fixed bug #9808. An update task failed because of a wrong where
   clause. This has been fixed.
   
 - Fixed bug #6335. Some characters caused problems while building XML.
   Now we are throwing an error in the calendar if those characters are
   found.
   
 - Fixed bug #7471. If an existing exception is deleted with the
   update method and the field delete_exception then this exeption
   was just marked as deleted exception without a real delete.
   This has been fixed.

 - Fixed bug #9599. By adding a new users the confirm message was
   deleted for existing users. This has been fixed.      

* 2007-10-17 - francisco.laguna@open-xchange.com
 - Bugfix 9061: Delete entries in del_infostore_documents to overwrite them
 - Bugfix 9555: Pay attention to delete permissions when moving infoitem
 - Bugfix 9741: Don't create filestore unless necessary
 

* 2007-10-16 - sebastian.kauss@open-xchange.com

 - Bugfix #9219: Reminder popups: Appointment reminder has wrong text
 - Bugfix #9416: Calendar: Concurrency issue with Reminder 
                 confirmations - Bad error message
 - Bugfix #9492: Calendar: Reminder appears again and again
 - Bugfix #9514: Calendar: Reminder for recurring appointments shown 
                 more than once for each occurence

* 2007-10-16 - thorben.betten@open-xchange.com

 - Bugfix #9501: Proper setting of IMAP timeout values in properties
 - Bugfix #9700: Applying sent order direction when displaying unread
   messages
 - Bugfix #9733: Changed error message if no admin has been specified when
   either creating or updating a folder's permissions

* 2007-10-12 - marcus.klein@open-xchange.com

 - Bugfix #9790: Added delete event for contexts. Its listeners remove the file
   storage.

* 2007-10-12 - thorben.betten@open-xchange.com

 - Bugfix #9787: Checking right table when looking for user's default
   infostore folder on context deletion

* 2007-10-11 - thorben.betten@open-xchange.com
